--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,20 +16,20 @@ services:
   backend:
     build:
       context: ./areas/backend
-      dockerfile: /Dockerfile
+      dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "5000:5000"
     depends_on:
         - minio
   ui:
     build:
       context: ./areas/sud_frontend
-      dockerfile: /Dockerfile
+      dockerfile: Dockerfile
     restart: always
     expose:
-        - "3333"
+        - "3000"
     ports:
-        - "3333:3333"
+        - "3000:3000"
     depends_on:
         - backend
 
