--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -45,3 +45,28 @@ jobs:
       - name: API tests
         working-directory: areas/backend
         run: python3 -m pytest -n auto ./tests/test_new_api
+
+  test_ui:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Build the Docker image
+        run: |
+          docker-compose -p data_manage_system up --build -d
+          docker ps -a
+
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
+      - name: Install dependencies
+        working-directory: areas/backend
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: API tests
+        working-directory: areas/backend
+        run: python3 -m pytest --headless ./tests/test_ui
