--- a/areas/backend/requirements.txt
+++ b/areas/backend/requirements.txt
@@ -1,5 +1,8 @@
 pytest~=7.4.3
 pytest-xdist~=3.5.0
+selenium~=4.16.0
+webdriver-manager~=4.0.1
+
 flask==3.0.0
 SQLAlchemy==2.0.23
 Flask_SQLAlchemy==3.1.1
