--- a/areas/backend/requirements.txt
+++ b/areas/backend/requirements.txt
@@ -2,6 +2,7 @@ pytest~=7.4.3
 pytest-xdist~=3.5.0
 selenium~=4.16.0
 webdriver-manager~=4.0.1
+psycopg2-binary==2.9.9
 
 flask==3.0.0
 SQLAlchemy==2.0.23
